# NumerAIR

./: .all-contributorsrc  Cargo.toml  README.md  repomix-output.txt
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md
.github/workflows/: test.yaml
src/: base.rs  eval.rs  lib.rs  packed.rs
src/backend/: cpu.rs  mod.rs  simd.rs
