[package]
name = "numerair"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.21.0"
lazy_static = "1.5.0"
num-traits = "0.2.19"
once_cell = "1.20.3"
rayon = "1.10.0"
serde = "1.0.218"
stwo-prover = { git = "https://github.com/starkware-libs/stwo.git", rev = "36b17ac" }

[dev-dependencies]
rand = "0.8.5"
